--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -28,7 +28,7 @@ Clerk allows you to modify the templates listed below.
 
 ### Email
 
-To access the email templates, navigate to the [Emails](https://dashboard.clerk.com/last-active?path=customization/email) tab under the **Customization** section in the Clerk Dashboard.
+To access the email templates, in the Clerk Dashboard, go to **Customization > [Emails](https://dashboard.clerk.com/last-active?path=customization/email)**.
 
 <Images 
 width={3024}
@@ -53,7 +53,7 @@ The following templates are available for customization:
 
 ### SMS
 
-To access the SMS templates, navigate to the [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) tab under the **Customization** section in the Clerk Dashboard.
+To access the SMS templates, in the Clerk Dashboard, go to **Customization > [SMS](https://dashboard.clerk.com/last-active?path=customization/sms)**.
 
 <Images 
 width={3024}
@@ -104,7 +104,7 @@ Please consult the following sub-sections to see which operations are available 
 
 ### Edit 
 
-Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the [Email](https://dashboard.clerk.com/last-active?path=customization/email) or [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) template listing page.
+Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the **[Email](https://dashboard.clerk.com/last-active?path=customization/email)** or **[SMS](https://dashboard.clerk.com/last-active?path=customization/sms)** template listing page. These pages can be found under the **Customization** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com).
 
 To persist your changes, click on the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance. 
 
