--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -15,7 +15,7 @@ Given the asynchronous nature of webhooks, they might not fit in every use case 
 
 ### Enable webhooks
 
-To enable webhooks, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page in the Clerk dashboard and click on the **Add Endpoint** button.
+To enable webhooks, go to the Clerk Dashboard and navigate to the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page. Select the **Add Endpoint** button.
 
 ![Add endpoint](/docs/images/users/guides/sync-backend/enable-webhook.png)
 
