--- a/docs/account-portal/disable-account-portal.mdx
+++ b/docs/account-portal/disable-account-portal.mdx
@@ -5,7 +5,7 @@ description: Learn how to disable the Account Portal.
 
 # Disabling the Account Portal
 
-If you would like to disable the Account Portal, you may do so under the **Danger** tab on the [Account Portal](https://dashboard.clerk.com/last-active?path=account-portal) page in the Clerk Dashboard. Please ensure that you set up an authentication flow for your users via the instructions below first, as applying this setting will immediately result in a 404 for all Account Portal pages.
+If you would like to disable the Account Portal, in the Clerk Dashboard, go to the **[Account Portal](https://dashboard.clerk.com/last-active?path=account-portal)** page and then open the **Danger** tab. Please ensure that you set up an authentication flow for your users via the instructions below first, as applying this setting will immediately result in a 404 for all Account Portal pages.
 
 <Callout type="danger">
   We recommend leaving the Account Portal enabled, even if you do choose to set up your own authentication flow. This helps with testing as well as providing an alternative path for users when needed.
