--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -19,11 +19,12 @@ To access authentication state from a satellite domain, users will be transparen
 <Steps>
 
 ### Create your application and install Clerk
+
 <Callout type="warning">
 Currently, multi-domain can be added to any Next.js or Remix application. For other React frameworks, multi-domain is still supported as long as you do not use server rendering or hydration.
 </Callout>
 
-To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.com/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. This is your primary domain. For the purposes of this guide, the primary domain will be `primary.dev`.
+To get started, you need to create an application from the [Clerk Dashboard](https://dashboard.clerk.com/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. This is your primary domain. For the purposes of this guide, the primary domain will be `primary.dev`.
 
 When building your sign-in flow, you must configure it to run within your primary application, e.g. on /sign-in.
 
@@ -33,7 +34,7 @@ When building your sign-in flow, you must configure it to run within your primar
 
 ### Add your first satellite domain
 
-Go to the [Domains](https://dashboard.clerk.com/last-active?path=domains) page in the Clerk dashboard and click on the 'Satellite' tab. Click on the 'Add satellite domain' button to add a new satellite domain of your choice. Then, follow the instructions provided.
+In the Clerk Dashboard, go to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page and then open the **Satellite** tab. Click on the **Add satellite domain** button to add a new satellite domain of your choice. Then, follow the instructions provided.
 
 For the purposes of this guide, the satellite domain will be "satellite.dev".
 
