--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -120,10 +120,10 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 <Tabs items={['Dashboard', 'Backend API']}>
   <Tab>
-    1. Navigate to the [Domains](https://dashboard.clerk.com/last-active?path=domains) page in the Clerk Dashboard.
+    1. In the Clerk Dashboard, go to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page.
     2. Navigate to the **Frontend API** section.
-    3. Click on **Advanced**.
-    4. Enter your proxy URL in the **Proxy URL** field. The proxy URL must be a valid URL and resolve correctly.
+    3. Select the **Advanced** drop down.
+    4. In the **Proxy URL** field, enter your proxy URL. The proxy URL must be a valid URL and resolve correctly.
   </Tab>
 
   <Tab>
