Update SAML docs with info about IdP-initiated flows (#475)

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -148,6 +148,10 @@ This will work: Once the user comes back from the IdP, they will need to go thro
 
 The users will not be deleted, so your application will not break. However, they will need to “reintroduce” themselves to your new strategies by resetting their passwords or via OTP (depending on the strategy you choose).
 
+**Does Clerk support IdP-initiated SSO?**
+
+No, Clerk only supports SP-initiated flows at this time.
+
 **How much does it cost now?**
 
 It’s going to be free during the Beta period.
