--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -325,9 +325,9 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
 
 #### Sign out of all sessions
 
-You can sign out of all currently active sessions by passing a callback that returns the `signOut()` method to the `signOutCallback` prop. This is useful for signing out all currently active accounts from a multi-session (multiple account) application.
+You can sign out of all currently active sessions by passing a callback that returns the [`signOut()`](/docs/custom-flows/multi-session-applications#sign-out-all-sessions) method to the `signOutCallback` prop. This is useful for signing out all currently active accounts from a multi-session (multiple account) application.
 
-In the example below, the `signOut()` method is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook.
+In the example below, the `signOut()` method is retrieved from the [`useClerk()`](/docs/references/react/use-clerk) hook.
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
@@ -338,7 +338,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
       import { SignOutButton, useClerk } from "@clerk/nextjs";
 
       export default function Home() {
-        const { signOut } = useAuth();
+        const { signOut } = useClerk();
 
         return (
           <div>
@@ -353,7 +353,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
       import { SignOutButton, useAuth } from "@clerk/nextjs";
 
       export default function Home() {
-        const { signOut } = useAuth();
+        const { signOut } = useClerk();
 
         return (
           <div>
@@ -371,7 +371,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
     import { SignOutButton, useAuth } from "@clerk/clerk-react";
 
     export default function Home() {
-      const { signOut } = useAuth();
+      const { signOut } = useClerk();
 
       return (
         <div>
@@ -388,7 +388,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
     import { SignOutButton, useAuth } from "@clerk/remix";
 
     export default function Home() {
-      const { signOut } = useAuth();
+      const { signOut } = useClerk();
 
       return (
         <div>
@@ -405,7 +405,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
     import { SignOutButton, useAuth } from "gatsby-plugin-clerk";
 
     export default function Home() {
-      const { signOut } = useAuth();
+      const { signOut } = useClerk();
 
       return (
         <div>
