--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -350,7 +350,7 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
       ```
 
       ```tsx filename="pages/index.tsx"
-      import { SignOutButton, useAuth } from "@clerk/nextjs";
+      import { SignOutButton, useClerk } from "@clerk/nextjs";
 
       export default function Home() {
         const { signOut } = useClerk();
@@ -368,7 +368,7 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
 
   <Tab>
     ```jsx filename="example.js"
-    import { SignOutButton, useAuth } from "@clerk/clerk-react";
+    import { SignOutButton, useClerk } from "@clerk/clerk-react";
 
     export default function Home() {
       const { signOut } = useClerk();
@@ -385,7 +385,7 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
 
   <Tab>
     ```jsx filename="pages/index.js"
-    import { SignOutButton, useAuth } from "@clerk/remix";
+    import { SignOutButton, useClerk } from "@clerk/remix";
 
     export default function Home() {
       const { signOut } = useClerk();
@@ -402,7 +402,7 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
 
   <Tab>
     ```jsx filename="pages/index.js"
-    import { SignOutButton, useAuth } from "gatsby-plugin-clerk";
+    import { SignOutButton, useClerk } from "gatsby-plugin-clerk";
 
     export default function Home() {
       const { signOut } = useClerk();
