feat: Add note about MDP for LinkedIn OAuth provider

--- a/docs/authentication/social-connections/linkedin-oidc.mdx
+++ b/docs/authentication/social-connections/linkedin-oidc.mdx
@@ -69,7 +69,7 @@ Navigate back to your LinkedIn app and go to the **Auth** tab.
 
 Paste the **Redirect URL** value you copied from the Clerk Dashboard into the **Authorized redirect URLs for your app** input in the **OAuth 2.0 settings** section.
 
-Above that section, copy the **Client ID** and **Client Secret** from the **Application credentials** section. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields. 
+Above that section, copy the **Client ID** and **Client Secret** from the **Application credentials** section. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
 
 <Callout type="info">
   If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
@@ -85,6 +85,10 @@ Above that section, copy the **Client ID** and **Client Secret** from the **Appl
 ### Enable OpenID Connect
 
 In the LinkedIn Developer portal for your application, go to the **Products** tab. Enable the **Sign In with LinkedIn using OpenID Connect** product for your OAuth application.
+
+<Callout type="info">
+  If you need to ensure the longevity of the user's access token without the need for re-authentication, make sure to obtain approval as a [Marketing Developer Platform (MDP) partner](https://learn.microsoft.com/en-us/linkedin/marketing/quick-start?view=li-lms-2023-10#step-1-apply-for-api-access). This is not required if you don't directly interact with the LinkedIn API using the access token.
+</Callout>
 
 <Images
   width={1096}
