--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -98,3 +98,30 @@ const signIn = await client.signIn.create({
   .catch((err) => console.error("error", err.errors[0].message));
 ```
 </CodeBlockTabs>
+
+## Special error cases
+
+### User locked
+
+If you have user lockout enabled on your instance and the user reaches the maximum allowed attempts for password or
+backup code verification, you will receive an HTTP status of 403 (Forbidden) and the following error payload:
+
+
+```json
+{
+    "errors": [
+        {
+            "message": "Account locked",
+            "long_message": "Your account is locked. You will be able to try again after 30 minutes. For more information, please contact support.",
+            "code": "user_locked",
+            "meta": {
+                "duration_in_seconds": 1800
+            }
+        }
+    ]
+}
+```
+
+Note: Actual remaining duration will vary depending on your configuration.
+
+You can opt to render the error message returned as-is or format the supplied `duration_in_seconds` as per your liking.
