adding more configuration guides and images. The images don't show for me. Also, no alt text for the images because it would re-state the instructions in a way that would not add any benefit for people using assistive technology.

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -18,12 +18,73 @@ By default, all Clerk applications will lock user accounts after 100 failed logi
 
 ## Lock a user after max attempts for a set period of time
 
+<Steps>
 
+### Navigate to Attack Protection
 
-## Lock a user out forever/until an admin unlocks their account
+In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
 
+### Set custom Maximum attempts
+
+The default is set to 100 failed login attempts. To change the number of attempts, under **Maximum attempts,** select "Custom attempts" and enter the number of failed attempts allowed before an account is locked.
+
+### Set custom Duration
+
+The default will lock a user from attempting to log in for one hour. To change the duration, under **Duration,** select "Custom duration" and select the unit of time (minutes/hours/days/years) and enter the number of units you want lockouts to last.
+
+### Apply your settings
+
+Select "Apply changes" to apply your settings.
+
+</Steps>
+
+<Images
+width={1512}
+height={914}
+src="/docs/images/authentication/userlock_custom-attempts-and-duration.png"
+alt=" "
+/>
+
+## Lock a user account forever until an admin unlocks the account
+
+<Steps>
+
+### Navigate to Attack Protection
+
+In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
+
+### Set custom Duration to "Indefinitely"
+
+Under **Duration,** select "Indefinitely." This will prevent the lockou
+
+### Apply your settings
+
+Select "Apply changes" to apply your settings.
+
+</Steps>
+
+<Images
+width={1512}
+height={914}
+src="/docs/images/authentication/userlock_indefinite.png"
+alt=" "
+/>
 
 
 ## Override a lockout
 
 Users with admin roles can override lockouts through the Clerk dashboard.
+
+<Steps>
+
+### Navigate to Users
+
+In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
+
+### Unlock the user from admin menu
+
+Locate the user who has been locked (look for a "locked" badge next to their username/email). Open the admin menu (three little dots) and select "Unlock".
+
+</Steps>
+
+TODO: Need an image of this.
