Adding links to pre-reqs

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -7,8 +7,8 @@ description:
 
 User accounts this feature is available for must use: 
 
-- [passwords](DASHBOARD LINK)
-- [backup codes](DASHBOARD LINK)
+- [Passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)
+- [Backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)
 
 ## Overview
 
