Add a /custom-flows/account-lockout page to cover custom usage of lock/unlock operations

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -103,7 +103,7 @@ const signIn = await client.signIn.create({
 
 ### User locked
 
-If you have user lockout enabled on your instance and the user reaches the maximum allowed attempts for password or
+If you have Account Lockout enabled on your instance and the user reaches the maximum allowed attempts for password or
 backup code verification, you will receive an HTTP status of 403 (Forbidden) and the following error payload:
 
 
@@ -112,7 +112,7 @@ backup code verification, you will receive an HTTP status of 403 (Forbidden) and
     "errors": [
         {
             "message": "Account locked",
-            "long_message": "Your account is locked. You will be able to try again after 30 minutes. For more information, please contact support.",
+            "long_message": "Your account is locked. You will be able to try again in 30 minutes. For more information, please contact support.",
             "code": "user_locked",
             "meta": {
                 "duration_in_seconds": 1800
