--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -30,7 +30,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
@@ -148,7 +148,38 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) to add fu
 
 Add it anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
 
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
+<CodeBlockTabs type="framework" options={["App Router", "Pages Router"]}>
+```tsx filename="app/page.tsx" {1,6}
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div>
+      <UserButton afterSignOutUrl="/"/>
+    </div>
+  )
+}
+```
+
+```tsx filename="pages/index.tsx" {1,7}
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <>
+			<header>
+				<UserButton afterSignOutUrl="/"/>
+			</header>
+			<div>Your page's content can go here.</div>
+    </>
+  );
+}
+```
+</CodeBlockTabs>
+
+### TEST
+
+<CodeBlockTabs type="framework" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
