Add first and last name fields to sign up form.

--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -133,6 +133,8 @@ import { useSignUp } from "@clerk/clerk-expo";
 export default function SignUpScreen() {
   const { isLoaded, signUp, setActive } = useSignUp();
 
+  const [firstName, setFirstName] = React.useState("");
+  const [lastName, setLastName] = React.useState("");
   const [emailAddress, setEmailAddress] = React.useState("");
   const [password, setPassword] = React.useState("");
   const [pendingVerification, setPendingVerification] = React.useState(false);
@@ -146,6 +148,8 @@ export default function SignUpScreen() {
 
     try {
       await signUp.create({
+        firstName,
+        lastName,
         emailAddress,
         password,
       });
@@ -181,6 +185,22 @@ export default function SignUpScreen() {
     <View>
       {!pendingVerification && (
         <View>
+        <View>
+            <TextInput
+              autoCapitalize="none"
+              value={firstName}
+              placeholder="First Name..."
+              onChangeText={(firstName) => setFirstName(firstName)}
+            />
+          </View>
+          <View>
+            <TextInput
+              autoCapitalize="none"
+              value={lastName}
+              placeholder="Last Name..."
+              onChangeText={(lastName) => setLastName(lastName)}
+            />
+          </View>
           <View>
             <TextInput
               autoCapitalize="none"
