--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -67,7 +67,7 @@ For meta-framework SDKs, you can opt-out of telemetry collection by setting the 
 If using `@clerk/clerk-react` directly, or using an SDK that doesn't have environment variable support, you can opt out by passing the follow prop to `<ClerkProvider />`:
 
 ```tsx
-<ClerkProvider telemetry={{ disabled: true }}>
+<ClerkProvider telemetry={false}>
 ```
 
 ### Next.js
@@ -91,17 +91,24 @@ GATSBY_CLERK_TELEMETRY_DISABLED=1
 ### React
 
 ```tsx
-<ClerkProvider telemetry={{ disabled: true }}>
+<ClerkProvider telemetry={false}>
+```
+
+### Vanilla JavaScript
+
+```js
+const clerk = new Clerk(publishableKey)
+c.load({ telemetry: false })
 ```
 
 ### Chrome extension
 
 ```tsx
-<ClerkProvider telemetry={{ disabled: true }}>
+<ClerkProvider telemetry={false}>
 ```
 
 ### Expo
 
 ```tsx
-<ClerkProvider telemetry={{ disabled: true }}>
+<ClerkProvider telemetry={false}>
 ```
