--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -44,6 +44,22 @@ Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/o
   ```
 </CodeBlockTabs>
 
+### TEST
+
+<CodeBlockTabs type="installer" options={['npm', 'yarn', 'pnpm']}>
+  ```bash filename="terminal"
+  npm install @clerk/nextjs
+  ```
+
+  ```bash filename="terminal"
+  yarn add @clerk/nextjs
+  ```
+
+  ```bash filename="terminal"
+  pnpm add @clerk/nextjs
+  ```
+</CodeBlockTabs>
+
 ### Set environment keys
 
 In your Next.js project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
@@ -67,7 +83,7 @@ This sets your public and secret keys.
 
 The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file. 
 
-<Tabs items={["App Router", "Pages Router"]}>
+<Tabs type="framework" items={["App Router", "Pages Router"]}>
   <Tab>
     
     <Callout>
