sync tabs and codeblocktabs instances; handles if no type is passed

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -83,7 +83,7 @@ This sets your public and secret keys.
 
 The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file. 
 
-<Tabs type="framework" items={["App Router", "Pages Router"]}>
+<Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
     
     <Callout>
@@ -164,7 +164,7 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) to add fu
 
 Add it anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
 
-<CodeBlockTabs type="framework" options={["App Router", "Pages Router"]}>
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
@@ -195,7 +195,7 @@ export default function Home() {
 
 ### TEST
 
-<CodeBlockTabs type="framework" options={["App Router", "Pages Router"]}>
+<CodeBlockTabs type="framework" options={["React", "Remix"]}>
 ```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
@@ -205,6 +205,52 @@ export default function Home() {
       <UserButton afterSignOutUrl="/"/>
     </div>
   )
+}
+```
+
+```tsx filename="pages/index.tsx" {1,7}
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <>
+			<header>
+				<UserButton afterSignOutUrl="/"/>
+			</header>
+			<div>Your page's content can go here.</div>
+    </>
+  );
+}
+```
+</CodeBlockTabs>
+
+### TEST
+
+<CodeBlockTabs type="framework" options={["React", "Remix", "Gatsby"]}>
+```tsx filename="app/page.tsx" {1,6}
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div>
+      <UserButton afterSignOutUrl="/"/>
+    </div>
+  )
+}
+```
+
+```tsx filename="pages/index.tsx" {1,7}
+import { UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <>
+			<header>
+				<UserButton afterSignOutUrl="/"/>
+			</header>
+			<div>Your page's content can go here.</div>
+    </>
+  );
 }
 ```
 
