--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -26,7 +26,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 | `lastName?` | `string` | The user's last name. |
 | `username?` | `string` | The user's username. |
 | `password?` | `string` | The plaintext password to give the user. |
-| `primaryEmailAddressID?` | `string` | Email address that will replays user's current primary email address. Must be unique across your instance. |
+| `primaryEmailAddressID?` | `string` | Email address that will replace user's current primary email address. Must be unique across your instance. |
 | `primaryPhoneNumberID?` | `string` | Phone number that will replace user's current primary phone number. Must be unique across your instance. |
 | `primaryWeb3WalletID?` | `string` | Web3 wallet that will replace user's current primary web3 wallet. Must be unique across your instance. |
 | `externalId?` | `string` | An external identifier for the user. Must be unique across your instance. |
