Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -43,12 +43,12 @@ An example event looks like this:
 }
 ```
 
-- **event** — A unique identifier for the event type
-- **cv** — Clerk Version. the version of the core Clerk library in use
-- **sdk** — SDK. The Clerk SDK that is being used
-- **sdkv** — SDK Version. The version of the Clerk SDK
-- **pk** — Publishable Key. The instance's publishable key
-- **payload** — Each unique event can provide custom data as part of the payload. As seen above, for the `COMPONENT_MOUNTED` event we track the component name and additional data about prop usage
+- `event` — A unique identifier for the event type.
+- `cv` — Clerk Version. The version of the core Clerk library in use.
+- `sdk` — SDK. The Clerk SDK that is being used.
+- `sdkv` — SDK Version. The version of the Clerk SDK.
+- `pk` — Publishable Key. The instance's publishable key.
+- `payload` — Each unique event can provide custom data as part of the payload. As seen above, for the `COMPONENT_MOUNTED` event we track the component name and additional data about prop usage.
 
 ## What about sensitive data?
 
