--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -64,7 +64,7 @@ We will never share with or sell telemetry data to third parties. The data is us
 
 For meta-framework SDKs, you can opt-out of telemetry collection by setting the environment variable: `CLERK_TELEMETRY_DISABLED=1`. Note that the variable name might differ between frameworks.
 
-If using `@clerk/clerk-react` directly, or using an SDK that doesn't have environment variable support, you can opt out by passing the follow prop to `<ClerkProvider />`:
+If you are using `@clerk/clerk-react` directly, or using an SDK that doesn't have environment variable support, you can opt out by passing the follow prop to `<ClerkProvider />`:
 
 ```tsx
 <ClerkProvider telemetry={false}>
