adding the final bit on overriding a lockout

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -5,18 +5,27 @@ description:
 
 ## Prerequisites
 
-User accounts this feature is available for must use: 
-
-- [Passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)
-- [Backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)
+This feature is only available for user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)
 
 ## Overview
 
 User accounts are a vector for malicious attacks for many reasons from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to log into an account. One line of defense against these attacks is to temporarily deny attempts to log into accounts that attempt too many failed logins in a short period of time. Locking out login attempts disrupts the attack and makes the account a less attractive target.
 
+### Clerk defaults
 By default, all Clerk applications will lock user accounts after 100 failed login attempts and require a one hour cool down period before anyone can attempt to log into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!) You can modify these defaults and Clerk users with admin roles override lockouts.
 
-## Lock a user after max attempts for a set period of time
+### What a locked out user sees
+
+When a user exceeds the maximum login attempts, the Clerk [<SignIn />](/docs/components/authentication/sign-in) component will inform them how long they've been locked out and to contact support for more information.
+
+<Images
+width={1512}
+height={914}
+src="/docs/images/authentication/userlock_login.png"
+alt="The Clerk component login form with a red alert stating 'Your account is locked. You will be able to try again in 59 minutes. For more information, please contact support.'"
+/>
+
+## Customize the max attempts before getting locked out and duration of lock out
 
 <Steps>
 
@@ -75,16 +84,16 @@ alt=" "
 
 Users with admin roles can override lockouts through the Clerk dashboard.
 
-<Steps>
-
-### Navigate to Users
-
-In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
-
-### Unlock the user from admin menu
-
-Locate the user who has been locked (look for a "locked" badge next to their username/email). Open the admin menu (three little dots) and select "Unlock".
+1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
+2. Locate the locked user by looking for a "locked" badge next to their username/email. 
+3. Open the admin menu (three little dots).
+4. Select "Unlock" to unlock them.
 
 </Steps>
 
-TODO: Need an image of this.
+<Images
+width={1512}
+height={914}
+src="/docs/images/authentication/userlock_dashboard.png"
+alt=" "
+/>
