--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -5,7 +5,7 @@ description: The useUser() hook is used to get the current user object and to up
 
 # `useUser()`
 
-The `useUser()` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
+The `useUser()` hook is a convenient way to access the current [`User`](/docs/references/javascript/user/user) data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ## Usage
 
@@ -163,4 +163,4 @@ export default function Home() {
 | --- | --- |
 | `isSignedIn` | A boolean that returns `true` if the user is signed in. |
 | `isLoaded` | A boolean that until Clerk loads and initializes, will be set to `false`. Once Clerk loads, `isLoaded` will be set to `true`. |
-| `user` | An object containing the user's data. If the user is not signed in, `user` will be `null`. |
+| `user` | The [`User`](/docs/references/javascript/user/user) object for the currently active user. If the user is not signed in, `user` will be `null`. |
