fix broken image

--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -16,7 +16,7 @@ Clerk supports Enterprise SSO via the SAML protocol so that you can create authe
 <Images 
   width={3024}
   height={1652}
-  src="/docs/images/authentication/email-address.webp"
+  src="/docs/images/authentication/email-address-configuration.jpg"
   alt="The Email, Phone, Username page in the Clerk Dashboard. There is a red arrow pointing to the toggle next to 'Email address', and it is toggled on."
 />
 
