adding the last screenshot and numbered listing

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -16,7 +16,7 @@ By default, all Clerk applications will lock user accounts after 100 failed logi
 
 ### What a locked out user sees
 
-When a user exceeds the maximum login attempts, the Clerk [<SignIn />](/docs/components/authentication/sign-in) component will inform them how long they've been locked out and to contact support for more information.
+When a user exceeds the maximum login attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them how long they've been locked out and to contact support for more information.
 
 <Images
 width={1512}
@@ -88,8 +88,6 @@ Users with admin roles can override lockouts through the Clerk dashboard.
 2. Locate the locked user by looking for a "locked" badge next to their username/email. 
 3. Open the admin menu (three little dots).
 4. Select "Unlock" to unlock them.
-
-</Steps>
 
 <Images
 width={1512}
