making the step-by-step instructions more concise

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -27,25 +27,10 @@ alt="The Clerk component login form with a red alert stating 'Your account is lo
 
 ## Customize the max attempts before getting locked out and duration of lock out
 
-<Steps>
-
-### Navigate to Attack Protection
-
-In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
-
-### Set custom Maximum attempts
-
-The default is set to 100 failed login attempts. To change the number of attempts, under **Maximum attempts,** select "Custom attempts" and enter the number of failed attempts allowed before an account is locked.
-
-### Set custom Duration
-
-The default will lock a user from attempting to log in for one hour. To change the duration, under **Duration,** select "Custom duration" and select the unit of time (minutes/hours/days/years) and enter the number of units you want lockouts to last.
-
-### Apply your settings
-
-Select "Apply changes" to apply your settings.
-
-</Steps>
+1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
+2. To change the number of failed attempts before a user is locked out, under **Maximum attempts,** select "Custom attempts" and enter a new number of failed attempts allowed. (The default is 100 attempts.)
+3. To change the duration, under **Duration,** select "Custom duration" and select the unit of time (minutes/hours/days/years) and enter the number of units you want lockouts to last.
+4. Select "Apply changes" to apply your settings.
 
 <Images
 width={1512}
@@ -56,21 +41,9 @@ alt=" "
 
 ## Lock a user account forever until an admin unlocks the account
 
-<Steps>
-
-### Navigate to Attack Protection
-
-In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
-
-### Set custom Duration to "Indefinitely"
-
-Under **Duration,** select "Indefinitely." This will prevent the lockou
-
-### Apply your settings
-
-Select "Apply changes" to apply your settings.
-
-</Steps>
+1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
+2. Under **Duration,** select "Indefinitely."
+3. Select "Apply changes" to apply your settings.
 
 <Images
 width={1512}
@@ -87,7 +60,7 @@ Users with admin roles can override lockouts through the Clerk dashboard.
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
 2. Locate the locked user by looking for a "locked" badge next to their username/email. 
 3. Open the admin menu (three little dots).
-4. Select "Unlock" to unlock them.
+4. Select "Unlock" to unlock the user account.
 
 <Images
 width={1512}
