updating the naming convention and editing the custom flow doc

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -1,5 +1,5 @@
 ---
-title: Lockout suspicious accounts
+title: Lock out suspicious accounts
 description: 
 ---
 
@@ -12,7 +12,7 @@ This feature is only available for user accounts that use [passwords](https://da
 User accounts are a vector for malicious attacks for many reasons from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to log into an account. One line of defense against these attacks is to temporarily deny attempts to log into accounts that attempt too many failed logins in a short period of time. Locking out login attempts disrupts the attack and makes the account a less attractive target.
 
 ### Clerk defaults
-By default, all Clerk applications will lock user accounts after 100 failed login attempts and require a one hour cool down period before anyone can attempt to log into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!) You can modify these defaults and Clerk users with admin roles override lockouts.
+By default, all Clerk applications will lock user accounts after 100 failed login attempts and require a one hour cool down period before anyone can attempt to log into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!) You can modify these defaults, and Clerk users with admin roles override lockouts.
 
 ### What a locked out user sees
 
@@ -51,7 +51,6 @@ height={914}
 src="/docs/images/authentication/userlock_indefinite.png"
 alt=" "
 />
-
 
 ## Override a lockout
 
