--- a/docs/custom-flows/account-lockout.mdx
+++ b/docs/custom-flows/account-lockout.mdx
@@ -15,26 +15,17 @@ If enabled on your instance, Clerk will automatically track users' failed verifi
 If the maximum allowed attempts are reached, the user will be locked out from signing in again until the lockout duration lapses.
 Lockout can also be configured to never expire, in which case the user will not be able to sign in unless an admin unlocks them.
 
-A user can be unlocked before the expiry of the lockout period by an admin.
-The unlock operation is available on the User listing or on the profile page of an individual user within the Clerk dashboard.
+An admin can [unlock a user before the expiry of the lockout period](/docs/authentication/configuration/lockout#override-a-lockout) via the Clerk dashboard.
 
-Note: self-service unlock is not yet available, i.e. users cannot currently unlock their own account or submit a request to the admin to be unlocked.
-This is an upcoming feature, so please check our changelog periodically to be informed once it is available.
-We will mention some ways in which you can implement self-service unlock un the following sections.
+<Callout type="info">
+Self-service unlock is not yet available, i.e. users cannot currently unlock their own account or submit a request to the admin to be unlocked. This is an upcoming feature, so please check our [changelog](/blog) periodically to be informed once it is available.
+</Callout>
 
-## Locking a user
-
-It is possible to programmatically lock a user based on your own custom criteria, e.g. if they are violating your app's code of conduct.
-
-You can do so via the [LockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation.
-
-Note: this does not prevent Clerk from locking the user based on failed verification attempts.
-
-## Unlocking a user
+## Unlocking a user programmatically
 
 You can programmatically unlock a user using the [UnlockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation.
 
-Possible use cases include:
+### Use cases
 
 * Your custom sign-in page could expose a button or link to request an unlock token when they are locked out of their account
     * Your app should be able to generate a random unlock token and associate it with the user
@@ -43,3 +34,9 @@ Possible use cases include:
 * If your app supports users submitting admin requests, it could expose a way of requesting an admin unlock
     * A request for unlock could arrive in your app's admin dashboard
     * If an admin reviews the request and decides to grant access back to the user, they can request an unlock from your app's backend, which should in turn call the Clerk Backend API
+
+## Locking a user programmatically
+
+You can programmatically lock a user based on your own custom criteria, e.g. if they are violating your app's code of conduct.
+
+You can do so via the [LockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation. Keep in mind that Clerk will still lock the user based on failed verification attempts.
